docs(readme): refine CapriGestor backend README